--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,78 +6,71 @@
 /*body*/
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Shippori+Mincho:wght@600&display=swap');
 
-
-/*nav csss done ver1*/
-*{
-  margin: 0;
-  padding-top: 0;
+* {
+  box-sizing: border-box;
 }
 body{
   font-family: "Open Sans";
   font-style: light;
   font-weight: 300;
   font-display: swap;
+  margin: 0px;
 }
-/*icon img*/
-img{
-  max-width: 100%;
+/*top nav bar*/
+.dropdown{
+  margin: 0 auto;
+} 
+nav{
+  background: white;
+  box-shadow: 0 10px 15px rgba(0,0,0,0.1);
+}
+.logo{
+  padding: 5px 5px 5px;
+  width: 150px;
   height: auto;
 }
-nav{
-  background-color: white;
-  margin: 15px 15px 15px;
-}
-nav p{ 
-  font-family: 'Shippori Mincho B1';
-  color: black;
-  font-size: 24px;
-  line-height: 55px;
-  float: left;
-  padding: 0px 20px;
-  margin: 0px 15px 0px;
-
- }
- nav ul{
+nav ul{
+  padding: 0;
+  margin: 0;
   float: right;
- }
- nav ul li {
-  float:left;
-  list-style:none ;
+  margin-right: 30px;
+}
+nav ul li{
   position: relative;
- }
-nav ul li a {
+  list-style: none;
+  display: inline-block;
+}
+nav ul li a{
+  background: white;
   display: block;
-  font-family: 'Shippori Mincho B1', serif;
+  padding: 0 15px;
   color: black;
-  font-size: 24px;
-    padding: 24px 14px;
-    text-decoration: none;
+  text-decoration: none;
+  text-align: center;
+  line-height: 60px;
+  font-size: 20px;
 }
-nav ul li ul {
-  display: none;
+nav ul li a:hover{
+  background: rgb(199, 199, 199);
+}
+nav ul ul{
   position: absolute;
-  background-color: white;
-  padding: 10px;
-  border-radius: 0px 0px 13px 13px; 
+  top: 60px;
+  display: none;
 }
-nav ul li:hover ul {
+nav ul li:hover > ul{
   display: block;
 }
-nav ul li ul li {
-  width: 100px;
-  border-radius:  13px; 
-}
-nav ul li ul li a img{
-  padding: 8px 14px;
-}
-nav ul li ul li a:hover {
-  background-color: #f3f3f3;
-}
-* {
-  box-sizing: border-box;
-  padding: none;
+nav ul ul li{
+  width: 150px;
+  float: none;
+  display: list-item;
+  position: relative;
 }
 /*footer ver,1 css*/
+.icon{
+  width: "200px"
+}
 .footer-container{
   display: flex;
   flex-direction: row;
@@ -88,68 +81,127 @@ nav ul li ul li a:hover {
   flex: 1;
   padding: 5px;
 }
-.footer-row2{
-  display: inline-block;
-  flex: 1;
-  padding: 5px;
+.footer-row1 img{
+  object-fit: contain;
 }
 .footer-row3{
   display: block;
-  font-family: 'Shippori Mincho B1', serif;
   color: black;
   font-size: 24px;
-  padding: 24px 14px;
+  padding: 20px 14px;
 }
 /*footer link change color and style ver1*/
-footer il:hover {
-  color: black;
+footer a{
+  color: orange;
+  text-decoration: none;
+  font-size: 14px;
 }
+
 .footer-row4{
   display: block;
-  font-family: 'Shippori Mincho B1', serif;
+  /* font-family: 'Shippori Mincho B1', serif; */
   color: black;
   font-size: 24px;
   padding: 24px 14px;
 }
-/*image row*/
+/*image row the image did not line up*/
 .row{
-        background: green;
-        width: 100%;
-        height: 80vh;
-        overflow: hidden;
-      }
-
+  width: 100%;
+}
+.column{
+  float: left;
+  width: 50%;
+}
+.column img{
+  width: 100%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.footer-text{
+  font-size: 14px;
+  float:right;
+  color: red;
+  padding: 0px 10px 0px 10px;
+}
+/* @media (max-width: 600px) {
   .column {
-    background: yellow;
-    width: 60%;
-    height: 100%;
-    overflow: hidden;
-    display: inline-block;
-  }
-
-  .column img {
     width: 100%;
   }
-  
-  .column2 {
-    background: lightsalmon;
-    width: 40%;
-    height: 100%;
-    overflow: hidden;
-    display: inline-block;
+} */
+/*top row image setting done do not touch!!!!!!!!!!!!*/
+.responsive{
+  width: 100%;
+  height: auto;
+}
+/*content article done*/
+.churchill-house-header{
+  display: block;
+}
+article{
+  padding: 10px;
+  border: 5px solid gray;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+h1{
+  font-weight: 400;
+    line-height: 100%;
+    margin: 0 0 45px;
+}
+/* p{
+  margin: 0 0 10px;
+  margin-bottom: 30px;
+} */
+@media screen and (max-width: 700px){
+.footer-container{
+flex-direction: column;
+background-color: whitesmoke;
+}
+}
+/* create a image and text cover on top of it */
+.head-history{
+  position: relative;
+  text-align: center;
+}
+.top-left {
+  position: absolute;
+  top: 40px;
+  left: 40px;
+  font-family: helvetica;
+  width: 30%;
+  background-color: white;
+  font-size: 60px;
+}
+.window{
+  width: 100%;
+}
+@media (max-width: 870px) {
+  .top-left {
+    width: fit-content;
+    font-size: 30px;
+    top: 80px;
+    left: 40px;
+    padding: 10px;
+}
+}
+/* column 2 */
+.column1 {
+  float: left;
+  width: 50%;
+  padding: 15px;
+}
+/* Clear floats after the columns */
+.rowhistory:after {
+  content: "";
+  display: table;
+  clear: both;
+} 
+/* Responsive layout - makes the three columns stack on top of each other instead of next to each other */
+@media screen and (max-width:600px) {
+  .column1 {
+    width: 100%;
   }
-  .column2 img {
-    height: 100%;
-    width: auto;
-  }
-
-  .aboutchurchillhouse {
-    float: left;
-    margin: 10px 10px 10px;
-  }
-
-
-
-
-
-
+}
